<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/listAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface">

            <LinearLayout
                android:id="@+id/settingsContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/listTitle"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center|start"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    tools:text="@string/app_name" />

                <ImageButton
                    android:id="@+id/mediaList"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/list"
                    android:padding="11dp"
                    app:srcCompat="@drawable/ic_round_view_list_24"
                    app:tint="?attr/colorOnSurface" />

<ImageButton
                    android:id="@+id/mediaGrid"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/grid"
                    android:padding="11dp"
                    app:srcCompat="@drawable/ic_round_grid_view_24"
                    app:tint="?attr/colorOnSurface" />
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

    <ani.sanin.FadingEdgeRecyclerView
        android:id="@+id/mediaRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:requiresFadingEdge="horizontal"
        android:nestedScrollingEnabled="false"
        tools:itemCount="4"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_media_compact"
        tools:orientation="horizontal" />

</LinearLayout>
